# noise-injekt

./: .gitignore  INSTALL  README  README.md  configure.ac
.github/workflows/: makefile.yml
examples/: README.md  TestService.cpp  TestService.h  TestServiceFactory.cpp  TestServiceFactory.h  example.cpp
man/: Makefile.am  noiseinjekt.1
src/: AppContext.cpp  AppContext.h  GlobalAppContext.cpp  GlobalAppContext.h  Makefile.am  Service.cpp  Service.h  ServiceFactory.cpp  ServiceFactory.h  main.cpp
tests/: main.cpp  tester.sh
